# grammar-reader

./: ArgumentsParser.h  CMakeLists.txt  GrammarReader.h  README.md  lab3.manifest.yaml  main.cpp
Automata/: MooreAutomata.h
